<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/txtExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/pink"
        android:scrollHorizontally="true"
        android:text="@string/exercise"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        android:layout_marginRight="0dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtExercise"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txtReps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtExercise"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabRemoveRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />
</android.support.constraint.ConstraintLayout>