<?xml version="1.0" encoding="utf-8"?>

<!--There is some kind of a bug with having constraint layout within a dialog. I have found that wrapping the
constraint layout inside the relative layout kind of fixes the problem and gives me exactly what I desired!-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:text="@string/new_session"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txtViewHeaderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="Tuesday, Sep 12 2017"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLastSession"
            android:layout_below="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/last_session" />

            <!-- Last session -->
            <TableLayout
                android:paddingLeft="27dp"
                android:background="@drawable/background_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/routine" />
                    <TextView
                        android:id="@+id/txtLastRoutineName"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="5x5" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/workout" />
                    <TextView
                        android:id="@+id/txtLastWorkoutName"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="Day 1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/last_date" />
                    <TextView
                        android:id="@+id/txtLastWorkoutDate"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="Friday" />
                </TableRow>
            </TableLayout>


            <TextView
                android:layout_marginTop="9dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:text="@string/next_session" />

            <!-- Next session -->
            <TableLayout
                android:paddingLeft="27dp"
                android:background="@drawable/background_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/routine" />
                    <Spinner
                        android:id="@+id/spnRoutines"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:spinnerMode="dialog" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/workout" />
                    <Spinner
                        android:id="@+id/spnWorkouts"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:spinnerMode="dialog"
                        android:entries="@array/temSpinnerItems2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="@string/last_date" />
                    <TextView
                        android:id="@+id/txtNextSessionDate"
                        android:layout_marginLeft="36dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size"
                        android:text="Tuesday, Sep 12 2017" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </RelativeLayout>
